// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionSocial component Should mount the SectionSocial component 1`] = `
<SectionSocial>
  <Section
    hasButton={true}
    hasShell={false}
    id="social"
  >
    <main
      className="o-main "
    >
      <section
        className="c-section c-section--social"
        id="social"
      >
        <SectionElements
          hasButton={true}
          hasShell={false}
          id="social"
        >
          <Lines>
            <div
              className="lines"
            >
              <div
                className="line line--vertical"
              />
              <div
                className="line line--vertical"
              />
              <div
                className="line line--vertical"
              />
            </div>
            <div
              className="lines"
            >
              <div
                className="line line--horizontal"
              />
              <div
                className="line line--horizontal"
              />
              <div
                className="line line--horizontal"
              />
            </div>
          </Lines>
          <header
            className="c-section__head"
          >
            <div
              className="o-shell"
            >
              <h1>
                Social
              </h1>
            </div>
          </header>
          <div
            className="c-section__entry"
          >
            <div
              className="o-shell"
            >
              <div
                className="o-grid"
              >
                <div
                  className="o-grid__item xs-12 sm-6"
                >
                  <h2>
                    Codersrank Profile
                  </h2>
                  <codersrank-widget
                    branding={false}
                    username="scriptex"
                  />
                </div>
                <div
                  className="o-grid__item xs-12 sm-6"
                >
                  <h2>
                    LinkedIn Profile
                  </h2>
                  <div
                    className="badge-base LI-profile-badge linkedin-frame"
                    data-locale="en_US"
                    data-size="large"
                    data-theme="dark"
                    data-type="HORIZONTAL"
                    data-vanity="scriptex"
                    data-version="v1"
                  />
                </div>
                <div
                  className="o-grid__item xs-12 sm-6"
                >
                  <h2>
                    Github Profile
                  </h2>
                  <iframe
                    className="github-frame"
                    frameBorder={0}
                    height="225"
                    loading="lazy"
                    src="https://github.com/sponsors/scriptex/card"
                    style={
                      Object {
                        "border": 0,
                      }
                    }
                    title="Sponsor scriptex"
                    width="600"
                  />
                </div>
                <div
                  className="o-grid__item xs-12 sm-6"
                >
                  <h2>
                    Twitter Profile
                  </h2>
                  <TwitterTimelineEmbed
                    options={
                      Object {
                        "height": "25rem",
                      }
                    }
                    screenName="scriptexbg"
                    sourceType="profile"
                    theme="dark"
                  >
                    <div />
                  </TwitterTimelineEmbed>
                </div>
                <div
                  className="o-grid__item xs-12 sm-6"
                >
                  <h2>
                    YouTube Channel
                  </h2>
                  <iframe
                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                    allowFullScreen={true}
                    className="youtube-frame"
                    frameBorder={0}
                    height="400"
                    loading="lazy"
                    src="https://www.youtube.com/embed/?list=PLgLu3XOevO8_G7n5n9Mmoe-xPwuwpGDYr"
                    title="YouTube video player"
                  />
                </div>
                <div
                  className="o-grid__item xs-12 sm-6"
                >
                  <h2>
                    Spotify playlist
                  </h2>
                  <iframe
                    allow="encrypted-media"
                    className="spotify-frame"
                    frameBorder={0}
                    height={380}
                    loading="lazy"
                    src="https://open.spotify.com/embed/playlist/37i9dQZF1EpzZomgLqaOnp?theme=0"
                    width="100%"
                  />
                </div>
                <div
                  className="o-grid__item xs-12 sm-6"
                >
                  <h2>
                    Stackoverflow flair
                  </h2>
                  <div
                    className="stackoverflow-frame"
                  >
                    <ExternalLink
                      href="https://stackoverflow.com/users/4140082/atanas-atanasov"
                    >
                      <a
                        href="https://stackoverflow.com/users/4140082/atanas-atanasov"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        <img
                          alt="profile for Atanas Atanasov at Stack Overflow, Q&A for professional and enthusiast programmers"
                          height="58"
                          src="https://stackoverflow.com/users/flair/4140082.png"
                          title="profile for Atanas Atanasov at Stack Overflow, Q&A for professional and enthusiast programmers"
                          width="208"
                        />
                      </a>
                    </ExternalLink>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <header
            className="c-section__head"
          >
            <div
              className="o-shell"
            >
              <h1>
                <ExternalLink
                  href="https://www.last.fm/user/scriptex"
                >
                  <a
                    href="https://www.last.fm/user/scriptex"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Last.FM
                  </a>
                </ExternalLink>
                 statistics
              </h1>
              <small>
                Updated at 
                Mock date
              </small>
            </div>
          </header>
          <div
            className="c-section__entry"
          >
            <div
              className="o-shell"
            >
              <div
                className="o-grid"
              >
                <div
                  className="o-grid__item xs-12"
                >
                  <h2>
                    Top albums for last week:
                  </h2>
                  <Carousel
                    classNamePrefix="carousel"
                    itemWidth={210}
                    items={Array []}
                    nextButtonContent="Next"
                    prevButtonContent="Previous"
                    showControls={true}
                  >
                    <div
                      className="carousel"
                    >
                      <div
                        className="carousel__container"
                        style={
                          Object {
                            "transform": "translateZ(NaNpx) rotateY(NaNdeg)",
                          }
                        }
                      />
                    </div>
                    <div
                      className="carousel__controls"
                    >
                      <button
                        className="carousel__control carousel__control--prev"
                        onClick={[Function]}
                      >
                        Previous
                      </button>
                      <button
                        className="carousel__control carousel__control--next"
                        onClick={[Function]}
                      >
                        Next
                      </button>
                    </div>
                  </Carousel>
                </div>
                <div
                  className="o-grid__item xs-12"
                >
                  <h2>
                    Top albums for last month:
                  </h2>
                  <Carousel
                    classNamePrefix="carousel"
                    itemWidth={210}
                    items={Array []}
                    nextButtonContent="Next"
                    prevButtonContent="Previous"
                    showControls={true}
                  >
                    <div
                      className="carousel"
                    >
                      <div
                        className="carousel__container"
                        style={
                          Object {
                            "transform": "translateZ(NaNpx) rotateY(NaNdeg)",
                          }
                        }
                      />
                    </div>
                    <div
                      className="carousel__controls"
                    >
                      <button
                        className="carousel__control carousel__control--prev"
                        onClick={[Function]}
                      >
                        Previous
                      </button>
                      <button
                        className="carousel__control carousel__control--next"
                        onClick={[Function]}
                      >
                        Next
                      </button>
                    </div>
                  </Carousel>
                </div>
              </div>
            </div>
          </div>
          <div
            className="c-section__actions"
          >
            <Button
              onClick={[Function]}
              type="button"
            >
              <button
                className="c-btn "
                onClick={[Function]}
                type="button"
              >
                Hire me
              </button>
            </Button>
            <ul
              className="c-section__actions-list"
            >
              <li>
                <Button
                  className="c-section__actions-close"
                  onClick={[Function]}
                  type="button"
                >
                  <button
                    className="c-btn c-section__actions-close"
                    onClick={[Function]}
                    type="button"
                  >
                    Close
                  </button>
                </Button>
              </li>
              <li>
                <Button
                  onClick={[Function]}
                  type="button"
                >
                  <button
                    className="c-btn "
                    onClick={[Function]}
                    type="button"
                  >
                    <Icon
                      className="c-section__actions-icon"
                      name="svg-email"
                    >
                      <svg
                        className="c-section__actions-icon"
                      >
                        <use
                          xlinkHref="#svg-email"
                        />
                      </svg>
                    </Icon>
                    <span>
                      Hire me
                    </span>
                    <strong>
                      directly
                    </strong>
                  </button>
                </Button>
              </li>
              <li>
                <ExternalLink
                  className="c-btn"
                  href="https://app.usebraintrust.com/talent/782/"
                  onClick={[Function]}
                >
                  <a
                    className="c-btn"
                    href="https://app.usebraintrust.com/talent/782/"
                    onClick={[Function]}
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    <Icon
                      className="c-section__actions-icon"
                      name="svg-braintrust"
                    >
                      <svg
                        className="c-section__actions-icon"
                      >
                        <use
                          xlinkHref="#svg-braintrust"
                        />
                      </svg>
                    </Icon>
                    <span>
                      Hire me on
                    </span>
                    <strong>
                      Braintrust
                    </strong>
                  </a>
                </ExternalLink>
              </li>
              <li>
                <ExternalLink
                  className="c-btn"
                  href="https://www.toptal.com/resume/atanas-atanasov"
                  onClick={[Function]}
                >
                  <a
                    className="c-btn"
                    href="https://www.toptal.com/resume/atanas-atanasov"
                    onClick={[Function]}
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    <Icon
                      className="c-section__actions-icon"
                      name="svg-toptal"
                    >
                      <svg
                        className="c-section__actions-icon"
                      >
                        <use
                          xlinkHref="#svg-toptal"
                        />
                      </svg>
                    </Icon>
                    <span>
                      Hire me on
                    </span>
                    <strong>
                      Toptal
                    </strong>
                  </a>
                </ExternalLink>
              </li>
            </ul>
          </div>
        </SectionElements>
      </section>
    </main>
  </Section>
</SectionSocial>
`;

exports[`SectionSocial component Should render the SectionSocial component 1`] = `
<Section
  hasButton={true}
  hasShell={false}
  id="social"
>
  <Lines />
  <header
    className="c-section__head"
  >
    <div
      className="o-shell"
    >
      <h1>
        Social
      </h1>
    </div>
  </header>
  <div
    className="c-section__entry"
  >
    <div
      className="o-shell"
    >
      <div
        className="o-grid"
      >
        <div
          className="o-grid__item xs-12 sm-6"
        >
          <h2>
            Codersrank Profile
          </h2>
          <codersrank-widget
            branding={false}
            username="scriptex"
          />
        </div>
        <div
          className="o-grid__item xs-12 sm-6"
        >
          <h2>
            LinkedIn Profile
          </h2>
          <div
            className="badge-base LI-profile-badge linkedin-frame"
            data-locale="en_US"
            data-size="large"
            data-theme="dark"
            data-type="HORIZONTAL"
            data-vanity="scriptex"
            data-version="v1"
          />
        </div>
        <div
          className="o-grid__item xs-12 sm-6"
        >
          <h2>
            Github Profile
          </h2>
          <iframe
            className="github-frame"
            frameBorder={0}
            height="225"
            loading="lazy"
            src="https://github.com/sponsors/scriptex/card"
            style={
              Object {
                "border": 0,
              }
            }
            title="Sponsor scriptex"
            width="600"
          />
        </div>
        <div
          className="o-grid__item xs-12 sm-6"
        >
          <h2>
            Twitter Profile
          </h2>
          <TwitterTimelineEmbed
            options={
              Object {
                "height": "25rem",
              }
            }
            screenName="scriptexbg"
            sourceType="profile"
            theme="dark"
          />
        </div>
        <div
          className="o-grid__item xs-12 sm-6"
        >
          <h2>
            YouTube Channel
          </h2>
          <iframe
            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
            allowFullScreen={true}
            className="youtube-frame"
            frameBorder={0}
            height="400"
            loading="lazy"
            src="https://www.youtube.com/embed/?list=PLgLu3XOevO8_G7n5n9Mmoe-xPwuwpGDYr"
            title="YouTube video player"
          />
        </div>
        <div
          className="o-grid__item xs-12 sm-6"
        >
          <h2>
            Spotify playlist
          </h2>
          <iframe
            allow="encrypted-media"
            className="spotify-frame"
            frameBorder={0}
            height={380}
            loading="lazy"
            src="https://open.spotify.com/embed/playlist/37i9dQZF1EpzZomgLqaOnp?theme=0"
            width="100%"
          />
        </div>
        <div
          className="o-grid__item xs-12 sm-6"
        >
          <h2>
            Stackoverflow flair
          </h2>
          <div
            className="stackoverflow-frame"
          >
            <ExternalLink
              href="https://stackoverflow.com/users/4140082/atanas-atanasov"
            >
              <img
                alt="profile for Atanas Atanasov at Stack Overflow, Q&A for professional and enthusiast programmers"
                height="58"
                src="https://stackoverflow.com/users/flair/4140082.png"
                title="profile for Atanas Atanasov at Stack Overflow, Q&A for professional and enthusiast programmers"
                width="208"
              />
            </ExternalLink>
          </div>
        </div>
      </div>
    </div>
  </div>
  <header
    className="c-section__head"
  >
    <div
      className="o-shell"
    >
      <h1>
        <ExternalLink
          href="https://www.last.fm/user/scriptex"
        >
          Last.FM
        </ExternalLink>
         statistics
      </h1>
      <small>
        Updated at 
        Mock date
      </small>
    </div>
  </header>
  <div
    className="c-section__entry"
  >
    <div
      className="o-shell"
    >
      <div
        className="o-grid"
      >
        <div
          className="o-grid__item xs-12"
        >
          <h2>
            Top albums for last week:
          </h2>
          <Carousel
            classNamePrefix="carousel"
            itemWidth={210}
            items={Array []}
            nextButtonContent="Next"
            prevButtonContent="Previous"
            showControls={true}
          />
        </div>
        <div
          className="o-grid__item xs-12"
        >
          <h2>
            Top albums for last month:
          </h2>
          <Carousel
            classNamePrefix="carousel"
            itemWidth={210}
            items={Array []}
            nextButtonContent="Next"
            prevButtonContent="Previous"
            showControls={true}
          />
        </div>
      </div>
    </div>
  </div>
</Section>
`;

exports[`SectionSocial component Should render the SectionSocial component while prerendering 1`] = `
<main
  class="o-main "
>
  <section
    class="c-section c-section--social"
    id="social"
  >
    <div
      class="lines"
    >
      <div
        class="line line--vertical"
      />
      <div
        class="line line--vertical"
      />
      <div
        class="line line--vertical"
      />
    </div>
    <div
      class="lines"
    >
      <div
        class="line line--horizontal"
      />
      <div
        class="line line--horizontal"
      />
      <div
        class="line line--horizontal"
      />
    </div>
    <header
      class="c-section__head"
    >
      <div
        class="o-shell"
      >
        <h1>
          Social
        </h1>
      </div>
    </header>
    <div
      class="c-section__entry"
    >
      <div
        class="o-shell"
      >
        <div
          class="o-grid"
        >
          <div
            class="o-grid__item xs-12 sm-6"
          >
            <h2>
              Codersrank Profile
            </h2>
          </div>
          <div
            class="o-grid__item xs-12 sm-6"
          >
            <h2>
              LinkedIn Profile
            </h2>
          </div>
          <div
            class="o-grid__item xs-12 sm-6"
          >
            <h2>
              Github Profile
            </h2>
          </div>
          <div
            class="o-grid__item xs-12 sm-6"
          >
            <h2>
              Twitter Profile
            </h2>
          </div>
          <div
            class="o-grid__item xs-12 sm-6"
          >
            <h2>
              YouTube Channel
            </h2>
          </div>
          <div
            class="o-grid__item xs-12 sm-6"
          >
            <h2>
              Spotify playlist
            </h2>
          </div>
          <div
            class="o-grid__item xs-12 sm-6"
          >
            <h2>
              Stackoverflow flair
            </h2>
          </div>
        </div>
      </div>
    </div>
    <header
      class="c-section__head"
    >
      <div
        class="o-shell"
      >
        <h1>
          <a
            href="https://www.last.fm/user/scriptex"
            rel="noopener noreferrer"
            target="_blank"
          >
            Last.FM
          </a>
           statistics
        </h1>
        <small>
          Updated at Mock date
        </small>
      </div>
    </header>
    <div
      class="c-section__entry"
    >
      <div
        class="o-shell"
      >
        <div
          class="o-grid"
        >
          <div
            class="o-grid__item xs-12"
          >
            <h2>
              Top albums for last week:
            </h2>
            <div
              class="carousel"
            >
              <div
                class="carousel__container"
                style="transform:translateZ(NaNpx) rotateY(NaNdeg)"
              />
            </div>
            <div
              class="carousel__controls"
            >
              <button
                class="carousel__control carousel__control--prev"
              >
                Previous
              </button>
              <button
                class="carousel__control carousel__control--next"
              >
                Next
              </button>
            </div>
          </div>
          <div
            class="o-grid__item xs-12"
          >
            <h2>
              Top albums for last month:
            </h2>
            <div
              class="carousel"
            >
              <div
                class="carousel__container"
                style="transform:translateZ(NaNpx) rotateY(NaNdeg)"
              />
            </div>
            <div
              class="carousel__controls"
            >
              <button
                class="carousel__control carousel__control--prev"
              >
                Previous
              </button>
              <button
                class="carousel__control carousel__control--next"
              >
                Next
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c-section__actions"
    >
      <button
        class="c-btn "
        type="button"
      >
        Hire me
      </button>
      <ul
        class="c-section__actions-list"
      >
        <li>
          <button
            class="c-btn c-section__actions-close"
            type="button"
          >
            Close
          </button>
        </li>
        <li>
          <button
            class="c-btn "
            type="button"
          >
            <svg
              class="c-section__actions-icon"
            >
              <use
                href="#svg-email"
              />
            </svg>
            <span>
              Hire me
            </span>
            <strong>
              directly
            </strong>
          </button>
        </li>
        <li>
          <a
            class="c-btn"
            href="https://app.usebraintrust.com/talent/782/"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              class="c-section__actions-icon"
            >
              <use
                href="#svg-braintrust"
              />
            </svg>
            <span>
              Hire me on
            </span>
            <strong>
              Braintrust
            </strong>
          </a>
        </li>
        <li>
          <a
            class="c-btn"
            href="https://www.toptal.com/resume/atanas-atanasov"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              class="c-section__actions-icon"
            >
              <use
                href="#svg-toptal"
              />
            </svg>
            <span>
              Hire me on
            </span>
            <strong>
              Toptal
            </strong>
          </a>
        </li>
      </ul>
    </div>
  </section>
</main>
`;
